src/Base/main/default/objects/Product_Option__c/fields/Available_Online__c.field-meta.xml
<CustomField>
    <fullName>Available_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies this product Option as Available for Online Boat Sales</description>
    <label>Available Online</label>
    <type>Checkbox</type>
</CustomField>