src/Base/main/default/objects/Product_Option__c/fields/From_Product__c.field-meta.xml
<CustomField>
    <fullName>From_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is generally the optional product (ie accessory)</description>
    <label>From_Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Available As an Option</relationshipLabel>
    <relationshipName>From_Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>