src/Base/main/default/objects/Product_Option__c/fields/IsBiggestMotor__c.field-meta.xml
<CustomField>
    <fullName>IsBiggestMotor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBiggestMotor</label>
    <type>Checkbox</type>
</CustomField>