src/Base/main/default/objects/Product_Option__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The &quot;step&quot; or spread between values displayed in the Boat Configurator.  Example Step = 0.5 Standard = 0, Maximum = 2 will result in 0, 0.5, 1, 1.5, 2 as optional values for the quantity of the product option</description>
    <inlineHelpText>The &quot;step&quot; or spread between values displayed in the Boat Configurator.  Example Step = 0.5 Standard = 0, Maximum = 2 will result in 0, 0.5, 1, 1.5, 2 as optional values for the quantity of the product option</inlineHelpText>
    <label>Step</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>