src/Base/main/default/objects/Product_Option__c/fields/To_Product__c.field-meta.xml
<CustomField>
    <fullName>To_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is generally the &apos;boat&apos; product an optional product is getting attached to</description>
    <label>To Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Available Options</relationshipLabel>
    <relationshipName>To_Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>